--- a/.github/workflows/external-indices.yml
+++ b/.github/workflows/external-indices.yml
@@ -6,8 +6,9 @@ on:
   push:
     branches:
       - main
-    tags:
-      - "*"
+  release:
+    types:
+      - published
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -51,10 +52,7 @@ jobs:
 
       - name: Create Tagged Release
         id: create_tagged_release
-        if:
-          (startsWith(github.ref, 'refs/tags/v') && github.event_name !=
-          'pull_request')
+        if: github.event_name == 'release' && github.event.action == 'published'
         uses: ncipollo/release-action@v1
         with:
-          generateReleaseNotes: true
           artifacts: "*.parquet"
