troubleshoot artifact upload

--- a/.github/workflows/external-indices.yml
+++ b/.github/workflows/external-indices.yml
@@ -56,3 +56,5 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "*.parquet"
+          allowUpdates: true
+          omitBodyDuringUpdate: true
